syntax = "proto3";
option java_package = "com.zeromb.gotostock";

service DispatcherGateway {
  rpc GetCurrentPrice(ISIN) returns (StockPrice) {};
  rpc GetOpeningPrice(ISIN) returns (StockPrice) {};
  rpc PlaceOrder(Order) returns (Empty) {};
  rpc CancelOrder(CancelOrderRequest) returns (Empty) {};
}

message Empty {}

message ISIN {
  string ISIN = 1;
}

message StockPrice {
  double price = 1;
}

message Asset {
  string ISIN = 1;
  int32 amount = 2;
  double price = 3;
}

message Order {
  string token = 1;
  Asset asset = 2;
  OrderType type = 3;
  bool is_buy = 4;
}

enum OrderType {
  UNSPECIFIED = 0;
  MARKET = 1;
  LIMIT = 2;
}

message CancelOrderRequest {
  string token = 1;
  uint64 order_id = 2;
}